--- a/docs/01.题解/10.数组/00.数组理论基础.md
+++ b/docs/01.题解/10.数组/00.数组理论基础.md
@@ -4,233 +4,261 @@ permalink: /array
 date: 2021-09-15 09:57:15
 ---
 
-## <meta\> 元素
+虽然在平常开发中，使用集合（容器）的频率比数组高得多，不过集合的底层也是通过数组来实现的。而且，尽管集合相比数组来说强大得多，但是其执行效率远不及数组。所以在下一章讲集合之前，非常有必要深入了解一下数组。全文脉络思维导图如下：
 
-### 概要
+![](https://gitee.com/veal98/images/raw/master/img/20210224154035.png)
 
-meta标签提供关于HTML文档的元数据。元数据不会显示在页面上，但是对于机器是可读的。它可用于浏览器（如何显示内容或重新加载页面），搜索引擎（关键词），或其他 web 服务。
+## 1. 一维数组详解
 
-<!-- more -->
+所谓数组，就是**相同数据类型的元素按一定顺序排列而成的集合**。先来看看一维数组的三种声明和赋值方式：
 
-**必要属性**
+第一种：
 
-| 属性    | 值        | 描述                                   |
-| ------- | --------- | -------------------------------------- |
-| content | some text | 定义与http-equiv或name属性相关的元信息 |
-
-**可选属性**
-
-| 属性       | 值                                                           | 描述                                |
-| ---------- | ------------------------------------------------------------ | ----------------------------------- |
-| http-equiv | content-type / expire / refresh / set-cookie                 | 把content属性关联到HTTP头部。       |
-| name       | author / description / keywords / generator / revised / others | 把 content 属性关联到一个name。     |
-| content    | some text                                                    | 定义用于翻译 content 属性值的格式。 |
-
-### 网页相关
-
-- **申明编码**
-
-```html
-<meta charset='utf-8' />
+```java
+int[] a = {1, 2, 3};
 ```
 
-- **优先使用 IE 最新版本和 Chrome**
+第二种：
 
-```html
-<!-- 关于X-UA-Compatible -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /> <!-- 推荐 -->
-
-<meta http-equiv="X-UA-Compatible" content="IE=6" ><!-- 使用IE6 -->
-<meta http-equiv="X-UA-Compatible" content="IE=7" ><!-- 使用IE7 -->
-<meta http-equiv="X-UA-Compatible" content="IE=8" ><!-- 使用IE8 -->
+```java
+int[] b = new int[] {1, 2, 3};
 ```
 
-- **浏览器内核控制**：国内浏览器很多都是双内核（webkit和Trident），webkit内核高速浏览，IE内核兼容网页和旧版网站。而添加meta标签的网站可以控制浏览器选择何种内核渲染。[参考文档](http://se.360.cn/v6/help/meta.html)
+第三种：
 
-```html
-默认用极速核(Chrome)：<meta name="renderer" content="webkit"> 
-默认用ie兼容内核（IE6/7）：<meta name="renderer" content="ie-comp"> 
-默认用ie标准内核（IE9/IE10/IE11/取决于用户的IE）：<meta name="renderer" content="ie-stand"> 
+```java
+int[] c = new int[3];
+c[0] = 1;
+c[1] = 2;
+c[2] = 3;
 ```
 
-国内双核浏览器默认内核模式如下：
+以上这三种方式的效果都是一样的，创建了一个存储 1、2、3 这三个整数的数组。
 
-1. 搜狗高速浏览器、QQ浏览器：IE内核（兼容模式）
-2. 360极速浏览器、遨游浏览器：Webkit内核（极速模式）
+> 可以使用下面两种形式声明数组 ：
+>
+> `int[] a;` 或  `int a[];` 
+>
+> 通常都会使用第一种风格， 因为它将类型 `int[] ` ( 整型数组）与变量名分开了。
 
-- **禁止浏览器从本地计算机的缓存中访问页面内容**：这样设定，访问者将无法脱机浏览。
+我们来反编译一下这三段代码的 `.class` 文件，你就会发现其实**在底层它们的创建方式都是一样的**，编译器自动的给我们加上了 new 关键字，甚至还把 c 的声明和赋值一体化了。
 
-```html
-<meta http-equiv="Pragma" content="no-cache">
+![](https://gitee.com/veal98/images/raw/master/img/20210222212639.png)
+
+另外，需要注意的是：`new int[3];` 这条语句会创建一个能够存储 3 个元素的数组，不过该数组的最后一个元素的下标是 2（因为下标从 0 开始计数，相信我，刷算法题的时候，这个鬼东西经常会让你脑子短路）。并且这条语句会自动的初始化所有元素，比如对于 int 数组来说就是全部初始化为 0，对于 boolean 数组来说就会全部初始化为 false， 对象数组就会初始化为 null 等。
+
+从上面这些代码和分析中，我们也不难看出，**数组创建之后是无法改变其存储空间大小的**（存储能力），尽管它可以改变每一个数组元素。
+
+我们通过 IDEA 的联想功能来看看数组能够调用什么东西：
+
+![](https://gitee.com/veal98/images/raw/master/img/20210222204027.png)
+
+可以发现，数组拥有 `Object` 类的所有方法，并且还会新增一个属性 `length`（注意是属性，而不是方法），用来表示这个数组的长度，我们可以这样调用：`a.length`。
+
+> 注意区别于 `String` 类的 `length()` **方法**，数组拥有的是 `length` **属性**，而非方法。
+
+综上，数组不仅能够封装数据，还能调用属性和方法，那这和对象有啥区别？没错，这也就是为什么说**数组的本质是对象**了。回顾一下我们之前总结的 Java 中方法参数的使用情况（按值调用）： 
+
+- 一个方法不能修改一个基本数据类型的参数（即数值型或布尔型）。 
+- 一个方法可以改变一个对象参数的状态。 
+- 一个方法不能让对象参数引用一个新的对象。
+
+而因为数组的本质是对象，因此，将数组作为参数传递给方法，这个数组是可以被改变的。
+
+OK，接下来，以下面这段代码为例，我们来看看一维数组在内存中的存储方式：
+
+```java
+int[] b = new int[] {1, 2, 3};
 ```
 
-- **Windows 8**
+int 数组对象 b 存储在 栈中，而数组元素既然是 new 出来的，那当然是存储在堆中。只有当 JVM 执行 `new int[]` 时，才会在堆中开辟相应的内存区域。
 
-```html
-<meta name="msapplication-TileColor" content="#000"/> <!-- Windows 8 磁贴颜色 -->
-<meta name="msapplication-TileImage" content="icon.png"/> <!-- Windows 8 磁贴图标 -->
+![](https://gitee.com/veal98/images/raw/master/img/20210222210543.png)
+
+## 2. 多维数组详解
+
+我们再来看看多维数组，就以二维数组为例，同样的三种声明与赋值方式：
+
+第一种：
+
+```java
+double[][] a = { 
+    {16, 3, 2, 13}， 
+    {5, 10, 11, 8}, 
+    {9, 6, 7, 12}, 
+    {4, 15, 14, 1} 
+};
 ```
 
-- **站点适配**：主要用于PC-手机页的对应关系。
+第二种：
 
-```html
-<meta name="mobile-agent"content="format=[wml|xhtml|html5]; url=url">
-<!--
-[wml|xhtml|html5]根据手机页的协议语言，选择其中一种；
-url="url" 后者代表当前PC页所对应的手机页URL，两者必须是一一对应关系。
- -->
+```java
+// 构造一个 4 行 4 列的二维数组
+double[][] b = new double[4][4] { 
+    {16, 3, 2, 13}， 
+    {5, 10, 11, 8}, 
+    {9, 6, 7, 12}, 
+    {4, 15, 14, 1} 
+};
 ```
 
-- **转码申明**：用百度打开网页可能会对其进行转码（比如贴广告），避免转码可添加如下meta。
+第三种：
 
-```html
-<meta http-equiv="Cache-Control" content="no-siteapp" />
+```java
+double[][] c = new double[4][4];
+c[0][0] = 16; // 第一行第一列值为 16
+c[0][1] = 3; // 第一行第二列值为 3
+c[0][2] = 2;
+c[0][3] = 13;
+c[1][0] = 5; // 第二行第一列值为 5
+c[1][1] = 10;
+c[1][2] = 1;
+c[1][3] = 8;
+......
 ```
 
+同样的，我们来反编译一下这三段代码的 `.class` 文件，底层它们的创建方式基本也都是一样的，不过有些细微的差别。编译器还是自动的给我们加上了 new 关键字，不过没有像一维数组那样把 c 的声明和赋值一体化了。
 
+![](https://gitee.com/veal98/images/raw/master/img/20210222212719.png)
 
+到目前为止，我们所看到的数组与其他程序设计语言中提供的数组没有多大区别。但实际存在着一些细微的差异， 而这正是 Java 的优势所在：**Java 实际上没有多维数组，只有一维数组**。多维数组被解释为**数组的数组**。请看下图：
 
+![](https://gitee.com/veal98/images/raw/master/img/20210222213413.png)
 
-### SEO优化
+由于可以单独地存取数组的某一行， 所以可以让两行交换。
 
-[参考文档](http://msdn.microsoft.com/zh-cn/library/ff724016)
-
-- **页面关键词**，每个网页应具有描述该网页内容的一组唯一的关键字。
-  使用人们可能会搜索，并准确描述网页上所提供信息的描述性和代表性关键字及短语。标记内容太短，则搜索引擎可能不会认为这些内容相关。另外标记不应超过 874 个字符。
-
-```html
-<meta name="keywords" content="your tags" />
+```java
+int[] temp = b[1];
+b[1] = b[2];
+b[2] = temp;
 ```
 
-- **页面描述**，每个网页都应有一个不超过 150 个字符且能准确反映网页内容的描述标签。
+![](https://gitee.com/veal98/images/raw/master/img/20210222213752.png)
 
-```html
-<meta name="description" content="150 words" />
+## 3. for each 循环
+
+Java 有一种功能很强的循环结构， 可以用来依次处理数组中的每个元素而不必为指定下标值而分心。 这种增强的 for 循环的语句格式为：
+
+```java
+for(variable : collection){
+    // todo
+}
 ```
 
-- **搜索引擎索引方式**，robotterms是一组使用逗号(,)分割的值，通常有如下几种取值：none，noindex，nofollow，all，index和follow。确保正确使用nofollow和noindex属性值。
+**`collection   `这一集合表达式必须是一个数组或者是一个实现了 `Iterable ` 接口的类对象**，例如 `ArrayList`。
 
-```html
-<meta name="robots" content="index,follow" />
-<!--
-    all：文件将被检索，且页面上的链接可以被查询；
-    none：文件将不被检索，且页面上的链接不可以被查询；
-    index：文件将被检索；
-    follow：页面上的链接可以被查询；
-    noindex：文件将不被检索；
-    nofollow：页面上的链接不可以被查询。
- -->
+![](https://gitee.com/veal98/images/raw/master/img/20210222215603.png)
+
+下面我们来对比一下使用下标遍历数组和使用 for each 循环遍历数组这两种方式：
+
+```java
+// 使用下标遍历数组
+int[] a = new int[100];
+for(int i = 0; i < 100; i++) {
+    a[i] = i;
+}
+
+// 使用 for each 循环遍历数组
+for(int element: a){
+    System.out.println(element);
+}
 ```
 
-- **页面重定向和刷新**：content内的数字代表时间（秒），既多少时间后刷新。如果加url,则会重定向到指定网页（搜索引擎能够自动检测，也很容易被引擎视作误导而受到惩罚）。
+for each 循环语句的循环变量将会遍历数组中的每个元素， 而不需要使用下标值。
 
-```html
-<meta http-equiv="refresh" content="0;url=" />
+不过，需要注意的是，**for each 循环语句不能自动处理多维数组的每一个元素，它是按照行， 也就是一维数组处理的**。以二维数组为例，要想访问二维数组的所有元素， 需要使用两个嵌套的循环， 如下所示：
+
+```java
+int[][] a = { 
+  {16, 3, 2, 13},
+  {5, 10, 11, 8}, 
+  {9, 6, 7, 12}, 
+  {4, 15, 14, 1} 
+};
+
+for(int[] row : a) { // 遍历每一行
+  for(int value : row) { // 遍历每一列
+  	System.out.println(value);
+  }
+}
 ```
 
-- **其他**
+## 4. 可变参数
 
-```html
-<meta name="author" content="author name" /> <!-- 定义网页作者 -->
-<meta name="google" content="index,follow" />
-<meta name="googlebot" content="index,follow" />
-<meta name="verify" content="index,follow" />
+在 **JDK 1.5** 之后，如果我们定义一个方法需要接受多个参数，并且**多个参数类型一致**，我们可以对其简化成如下格式：
+
+```java
+修饰符 返回值类型 方法名 (参数类型... 形参名){  }
 ```
 
-### 移动设备
+`...` 用在参数上，称之为**可变参数**，它**表明这个方法可以接收任意数量的参数**。其实这个写法完全等价与
 
-- **viewport**：能优化移动浏览器的显示。如果不是响应式网站，不要使用initial-scale或者禁用缩放。
-
-```html
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimun-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-<!--这是常用的移动meta设置-->
+```java
+修饰符 返回值类型 方法名 (参数类型[] 形参名){  }
 ```
 
-1. width：宽度（数值 / device-width）（范围从200 到10,000，默认为980 像素）
-2. height：高度（数值 / device-height）（范围从223 到10,000）
-3. initial-scale：初始的缩放比例 （范围从>0 到10）
-4. minimum-scale：允许用户缩放到的最小比例
-5. maximum-scale：允许用户缩放到的最大比例
-6. user-scalable：用户是否可以手动缩 (no,yes)
+虽然同样是代表数组，但是在调用这个带有可变参数的方法时，不用创建数组，直接将数组中的元素作为实际参数进行传递，这就是简单之处。当然，其实这种方式的底层实现也是将这些元素先封装到一个数组中，在进行传递，不过这些动作都在编译 `.class` 文件时就自动完成了。
 
-**注意**，很多人使用initial-scale=1到非响应式网站上，这会让网站以100%宽度渲染，用户需要手动移动页面或者缩放。如果和initial-scale=1同时使用user-scalable=no或maximum-scale=1，则用户将不能放大/缩小网页来看到全部的内容。
+代码演示：    
 
-- **WebApp全屏模式**：伪装app，离线应用。
-
-```html
-<meta name="apple-mobile-web-app-capable" content="yes" /> <!-- 启用 WebApp 全屏模式 -->
+```java
+public class ChangeArgs {
+    
+    //可变参数写法
+    public static int getSum(int... arr) {
+        int sum = 0;
+        for (int a : arr) {
+            sum += a;
+        }
+        return sum;
+    }
+    
+    public static void main(String[] args) {
+        int[] arr = { 1, 4, 62, 431, 2 };
+        int sum = getSum(arr);
+        System.out.println(sum);
+        
+        int sum2 = getSum(6, 7, 2, 12, 2121);
+        System.out.println(sum2);
+    }
+}
 ```
 
-- **主题颜色**
+> 需要注意的是：如果在方法书写时，这个方法拥有多个参数，并且参数中包含可变参数，**可变参数一定要写在参数列表的末尾**。
 
-```html
-<meta name="theme-color" content="#11a8cd">
+## 5. Arrays 类
+
+Java 中，提供了一个很有用的数组工具类：`java.util.Arrays`。它提供的主要操作有：
+
+1）`Arrays.toString` - 将一维数组转成字符串类型（打印一维数组的所有元素）
+
+2）`Arrays.deepToString` - 将二维数组转成字符串类型（打印二维数组的所有元素）
+
+3）`Arrays.copyOf` - 数组拷贝。举个例子，将 a 数组中的元素全部拷贝给 c 数组：
+
+```java
+int[] c = Arrays.copyOf(a, 2 * a.length());
 ```
 
-![](https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200221134927.jpg)
+第 2 个参数是新数组的长度。这个方法通常用来增加新数组的大小：如果数组元素是数值型，那么多余的元素将被赋值为 0 ; 如果数组元素是布尔型，则将赋值为 false 等。相反，如果长度小于原始数组的长度，则只拷贝最前面的数据元素。
 
-- **隐藏状态栏/设置状态栏颜色**：只有在开启WebApp全屏模式时才生效。content的值为default | black | black-translucent 。
+4）`Arrays.sort` - 对数组中的元素进行排序
 
-```html
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-```
+5）`Arrays.equals` -  `Arrays ` 类提供了重载后的 `equals` 方法，用来基于内容比较数组，数组相等的条件是元素个数和对应位置的元素都相等。
 
-- **添加到主屏后的标题**
+![](https://gitee.com/veal98/images/raw/master/img/20210222220938.png)
 
-```html
-<meta name="apple-mobile-web-app-title" content="标题">
-```
+## 6. 总结
 
-- **忽略数字自动识别为电话号码**
+不可否认，在 Java 中，数组是一种效率最高的存储和随机访问对象引用序列的方式。数组就是一个简单的线性序列，在内存中采用**连续空间分配**的存储方式，这使得通过下标访问元素非常快速。但是代价就是**一旦创建了数组， 就不能再改变它的大小**（尽管可以改变每一个数组元素）。
 
-```html
-<meta content="telephone=no" name="format-detection" />
-```
+如果**经常需要在运行过程中扩展数组的大小， 可以使用集合 `ArrayList`** 。它可以通过创建一个新实例，然后把旧实例中所有的引用移到新实例中，从而实现更多空间的自动分配。但是这种弹性需要开销，因此，ArrayList 的效率比数组低很多。当然，无论数组还是集合，如果越界，都会得到一个 `RuntimeException `异常。
 
-- **忽略识别邮箱**
+关于集合会写成一个系列，下篇文章就会陆续开更，内容没啥难度，不过要记的东西非常多，啃完集合后面还有个硬骨头多线程，这俩学完 Java 基础部分基本就没啥了。
 
-```html
-<meta content="email=no" name="format-detection" />
-```
+## 参考资料
 
-- **添加智能 App 广告条 Smart App Banner**：告诉浏览器这个网站对应的app，并在页面上显示下载banner(如下图)。[参考文档](https://developer.apple.com/library/ios/documentation/AppleApplications/Reference/SafariWebContent/PromotingAppswithAppBanners/PromotingAppswithAppBanners.html)
-
-```html
-<meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
-```
-
-![](https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200221134638.png)
-
-- **其他** [参考文档](http://fex.baidu.com/blog/2014/10/html-head-tags/?qq-pf-to=pcqq.c2c)
-
-```html
-<!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
-<meta name="HandheldFriendly" content="true">
-<!-- 微软的老式浏览器 -->
-<meta name="MobileOptimized" content="320">
-<!-- uc强制竖屏 -->
-<meta name="screen-orientation" content="portrait">
-<!-- QQ强制竖屏 -->
-<meta name="x5-orientation" content="portrait">
-<!-- UC强制全屏 -->
-<meta name="full-screen" content="yes">
-<!-- QQ强制全屏 -->
-<meta name="x5-fullscreen" content="true">
-<!-- UC应用模式 -->
-<meta name="browsermode" content="application">
-<!-- QQ应用模式 -->
-<meta name="x5-page-mode" content="app">
-<!-- windows phone 点击无高光 -->
-<meta name="msapplication-tap-highlight" content="no">
-```
-
-
-
-### 一个常用的移动端页面meta设置
-
-```html
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimun-scale=1.0,maximum-scale=1.0,user-scalable=no">
-```
-
+- 《Java 核心技术 - 卷 1 基础知识 - 第 10 版》
+- 《Thinking In Java（Java 编程思想）- 第 4 版》
+- 《On Java 8》中文版（《Java 编程思想》- 第 5 版）
+- 清浅池塘 - Java 中的数组-Java那些事儿：https://juejin.cn/post/6844903498207756295
