--- a/docs/01.题解/20.链表/00.链表理论基础.md
+++ b/docs/01.题解/20.链表/00.链表理论基础.md
@@ -4,24 +4,7 @@ permalink: /linkedlist
 date: 2021-09-15 09:57:15
 ---
 
-## Flex 布局教程：语法篇
-<http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html>
-
-## CSS Grid 网格布局教程
-<http://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html>
-
-## 只要一行代码，实现五种 CSS 经典布局
-<http://www.ruanyifeng.com/blog/2020/08/five-css-layouts-in-one-line.html>
-* 空间居中布局
-  > 不管容器的大小，项目总是占据中心点
-* 并列式布局
-  > 多个项目并列，如果宽度不够，放不下的项目就自动折行
-* 两栏式布局
-  > 一个边栏，一个主栏。边栏始终存在，主栏根据设备宽度，变宽或者变窄
-* 三明治布局
-  > 页面在垂直方向上，分成三部分：页眉、内容区、页脚。
-* 圣杯布局
-  > 最常用的布局，所以被比喻为圣杯。它将页面分成五个部分，除了页眉和页脚，内容区分成左边栏、主栏、右边栏。
+> 🏃‍ TODO......
 
 
 
