--- a/docs/01.题解/30.哈希表/50.两数之和.md
+++ b/docs/01.题解/30.哈希表/50.两数之和.md
@@ -52,7 +52,7 @@ class Solution {
 
 ![](https://gitee.com/veal98/images/raw/master/img/20210916160222.png)
 
-可以**通过一个哈希表减少时间复杂度**：哈希表的 key 对应元素的值，哈希表的 value 对应元素的下标（因为题目需要返回的就是下标），比如某个元素值为 2，就将这个元素的下标存放在哈希表的 key = 2 的 value 上。这样，我们只需要遍历一遍哈希表的 key，查看 key = target - 2 的位置上对应的 value 是否为空，就能知道有没有元素能和 2 组成 target 了。
+可以**通过一个哈希表减少时间复杂度**：哈希表的 key 对应元素的值，哈希表的 value 对应元素的下标（因为题目需要返回的就是下标），比如某个元素值为 2，就将这个元素的下标存放在哈希表的 key = 2 的 value 上。这样，我们只需要遍历一遍数组，查看 map 中 target - nums[i] 对应的键值对是否存在（并且还要注意这个数不能是 nums[i] 本身），就能知道有没有元素能和 2 组成 target 了。
 
 ```java
 class Solution {
