add hashtable-18 adn binary-search-704

--- a/docs/01.题解/30.哈希表/60.四数相加II.md
+++ b/docs/01.题解/30.哈希表/60.四数相加II.md
@@ -91,5 +91,5 @@ class Solution {
 
 ## 💥 复杂度分析
 
-- 空间复杂度：O(N)
+- 空间复杂度：HasMap 中处理了两个数组的所有组合，所以空间复杂度为 O(N^2)
 - 时间复杂度：一共两个两层循环，O(N^2) + O(N^2) = O(N^2)
