add binary-search LeetCode.374/69/1351/278/153

--- a/docs/01.题解/70.二分查找/00.二分查找理论基础.md
+++ b/docs/01.题解/70.二分查找/00.二分查找理论基础.md
@@ -1,7 +1,7 @@
 ---
 title: 二分查找理论基础
 date: 2021-09-18 16:52:12
-permalink: /pages/bef733/
+permalink: /binarysearch/
 ---
 
 > 二分查找其实就是使用了分治法的思想
@@ -30,7 +30,9 @@ permalink: /pages/bef733/
 
 ## 3. 二分查找模板
 
-一般而言，当一个题目出现以下特性时，你就应该立即联想到它可能需要使用二分查找：
+二分查找类的题目是一个比较简单的模板题，很多题目只要理解了题意直接套模板就解出来了。
+
+一般而言，当一个题目出现以下特性时，我们就应该立即联想到它可能需要使用二分查找：
 
 - **待查找的数组有序或者部分有序**
 
@@ -46,15 +48,9 @@ permalink: /pages/bef733/
 
 ### ① 标准的二分查找
 
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [349 - 两个数组的交集](计算机基础/算法/LeetCode/二分查找/349-两个数组的交集.md) |  Easy  |
-| [1237 - 找出给定方程的正整数解](计算机基础/算法/LeetCode/二分查找/1237-找出给定方程的正整数解.md) |  Easy  |
-| [704 - 二分查找](计算机基础/算法/LeetCode/二分查找/704-二分查找.md) |  Easy  |
-| [374 - 猜数字大小](计算机基础/算法/LeetCode/二分查找/374-猜数字大小.md) |  Easy  |
-| [69 - x 的平方根](计算机基础/算法/LeetCode/二分查找/69-x的平方根.md) |  Easy  |
+首先，标准二分查找的适用场景是：**数组元素有序且不重复**
 
-首先给出标准二分查找的模板：这个场景是最简单的，也是大家最熟悉的，即搜索一个数，如果存在，返回其索引，否则返回 -1。
+我们以 “搜索一个数，如果存在，返回其索引，否则返回 -1” 为例，给出标准二分查找的模板：
 
 ```java
 // 二分查找某个数
@@ -65,8 +61,10 @@ public int binarySearch(int[] nums, int target) {
         int mid = left + ((right - left) >> 1);
         if (nums[mid] == target) 
             return mid;
+        // 收缩右边界
         else if (nums[mid] > target)
-            right = mid - 1; 
+            right = mid - 1;
+        // 收缩左边界
         else // (nums[mid] < target)
             left = mid + 1; 
     }
@@ -103,7 +101,7 @@ public int binarySearch(int[] nums, int target) {
 
 `while(left < right)` 的终止条件是 `left == right`，写成区间的形式就是 `[left, right]`，或者带个具体的数字进去 `[2, 2]`，**这时候区间非空**，还有一个数 2，但此时 while 循环终止了。也就是说这区间 `[2, 2]` 被漏掉了，索引 2 没有被搜索，如果这时候直接返回 -1 就是错误的。
 
-💡 当然，如果你非要用 `while(left < right)` 也可以，我们已经知道了出错的原因，打个补丁好了：
+💡 当然，如果你非要用 `while(left < right)` 也可以，我们已经知道了出错的原因，**打个补丁**好了：
 
 ```java
     //...
@@ -128,25 +126,20 @@ public int binarySearch(int[] nums, int target) {
 
 上述算法自然是无法应用到所有场景的，比如说给你有序数组 `nums = [1,2,2,2,3]`，`target` 为 2，此算法返回的索引是 2。但是如果我<u>想得到 `target` 的左侧边界，即索引 1，或者我想得到 `target` 的右侧边界，即索引 3</u>，这样的话上述标准形式的二分查找算法是无法处理的。
 
-**先从二分查找左边界说起**：利用二分法寻找左边界是二分查找的一个变体，应用它的题目常常有以下几种特性之一：
+利用二分法寻找左（右）边界是二分查找的一个变体，一般适用场景可以分为两种：
+
+**1）第一种情况**：
 
 - 数组有序，但包含重复元素
 - 数组部分有序，且不包含重复元素
-- 数组部分有序，且包含重复元素
-
-#### Ⅰ 左边界查找类型 1
-
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [1351 - 统计有序矩阵中的负数](计算机基础/算法/LeetCode/二分查找/1351-统计有序矩阵中的负数.md) |   😎    |
-| [278 - 第一个错误的版本](计算机基础/算法/LeetCode/二分查找/278-第一个错误的版本.md) |   😎    |
-| [153 - 寻找旋转排序数组中的最小值](计算机基础/算法/LeetCode/二分查找/153-寻找旋转排序数组中的最小值.md) |   👻    |
-
-左边界查找的第一种类型用于上述的第一种和第二种情况：<u>数组有序，但包含重复元素 或者 数组部分有序，且不包含重复元素</u>
 
 <img src="https://gitee.com/veal98/images/raw/master/img/20200926161222.png" style="zoom:50%;" />
 
-<u>**既然要寻找左边界，搜索范围就需要从右边开始，不断往左边收缩**，也就是说即使我们找到了`nums[mid] == target`, 这个`mid`的位置也不一定就是最左侧的那个边界，我们还是要向左侧查找，所以我们在`nums[mid]`偏大或者 `nums[mid]`就等于目标值的时候，继续收缩右边界</u>，算法模板如下：
+查找右边界和左边界的模板差不多，这里我们先以查找左边界为例：
+
+**既然要寻找左边界，搜索范围就需要从右边开始，不断往左边收缩**，也就是说即使我们找到了`nums[mid] == target`, 这个 `mid` 的位置也不一定就是最左侧的那个边界，我们还是要向左侧查找，也就是说，除了在 `nums[mid]` 偏大的时候需要收锁右边界，在 `nums[mid]` 等于目标值的时候，不同于标准的二分查找直接返回，我们此时仍然需要**继续收缩右边界**。
+
+算法模板如下：
 
 ```java
 // 二分查找某个数的左边界
@@ -154,13 +147,17 @@ public int binarySearch(int[] nums, int target) {
     int left = 0;
     int right = nums.length - 1;
     while (left < right) { // 注意
-        int mid = left + (right - left) / 2;
+        int mid = left + ((right - left)) >> 1;
+        // 收缩左边界
         if (nums[mid] < target) {
             left = mid + 1;
-        } else {
+        } else { // nums[mid] >= target
+            // 收缩右边界
             right = mid;
         }
     }
+    
+    // 打个补丁
     return nums[left] == target ? left : -1;
 }
 ```
@@ -173,27 +170,36 @@ public int binarySearch(int[] nums, int target) {
 
 🚨 与标准的二分查找不同：
 
-**① 这里的右边界的更新是 `right = mid`，因为我们需要在找到目标值后，继续向左寻找左边界。**
+**① 这里的右边界的更新是 `nums[mid] >= targets`，因为我们需要在找到目标值后，继续向左寻找左边界。**
 
 **② 这里的循环条件是 `left < right` 而不是 `<=`：**
 
-<u>因为在最后`left`与`right`相邻的时候，`mid`和`left`处于相同的位置(前面说过，`mid`偏左)，则下一步，无论怎样，`left`, `mid`, `right`都将指向同一个位置，如果此时循环的条件是`left <= right`，则我们需要再进入一遍循环，此时，如果`nums[mid] < target`还好说，循环正常终止；否则，我们会令`right = mid`，这样并没有改变`left`,`mid`,`right`的位置，将进入死循环。</u>
+我们把处理到 left + 1 = right 位置上的 while 循环称为倒数第二轮循环，把处理到 left = right 也即最后一个数的 while 循环称为最后一轮循环。
 
-事实上，我们只需要遍历到`left`和`right`相邻的情况就行了，因为这一轮循环后，无论怎样，`left`,`mid`,`right`都会指向同一个位置，而如果这个位置的值等于目标值，则它就一定是最左侧的目标值；如果不等于目标值，则需要再多做一次判断，因为这个索引是我们漏掉的（上文 <u>标准的二分查找 ①</u> 中已有详细说明）：
+因为在最后 `left` 与 `right` 相邻的时候也即 `left + 1 = right` 倒数第二轮循环的时候，`mid` 和 `left` 处于相同的位置(前面说过，`mid` 偏左)，那么，此时无论是走到 left = mid + 1 也好，还是 right = mid 也好，如果此时循环的条件是 `left <= right`，就会进入最后一轮循环（left = right，只剩最后一个数了），left 和 right 必定是处于同一个位置，也就是说 `left`, `mid`, `right` 都将指向同一个位置，对吧，其实这逻辑没有问题，标准的二分查找中也确实需要走到最后一步循环。
+
+但是，我们这的代码和标准二分查找的代码不同：
+
+- 如果 `nums[mid] < target`，left 会变成 mid + 1 从而破坏 while 条件从而循环正常终止；
+- 但是，如果 `nums[mid] >= target` ，我们会令 `right = mid`，这个时候总共只有一个数了，mid 赋值给 right 并没有改变 `left`,`mid`,`right` 的位置，这将导致彻底进入死循环！
+
+那既然如果走到最后一轮循环会可能导致死循环的发生，那我们只走到倒数第二轮循环即 `left` 和 `right` 相邻就好了，把最后一个数单独拉出来处理（或者说打个补丁）：
 
 ```java
 return nums[left] == target ? left : -1;
 ```
 
-#### Ⅱ 左边界查找类型 2
+<br>
 
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [154 - 寻找旋转排序数组中的最小值 II](计算机基础/算法/LeetCode/二分查找/154-寻找旋转排序数组中的最小值II.md) |   👽    |
 
-左边界查找的第二种类型适用于上述的第三种情况：<u>数组部分有序且包含重复元素</u>：
+
+**2）第二种情况**：
+
+- 数组部分有序，且包含重复元素
 
 <img src="https://gitee.com/veal98/images/raw/master/img/20200926152151.png" style="zoom: 67%;" />
+
+同样地，我们先以查找左边界为例：
 
 这种条件下在我们向左收缩的时候，不能简单的令 `right = mid`，因为有重复元素的存在，这会导致我们有可能遗漏掉一部分区域，此时向左收缩只能采用比较保守的方式，代码模板如下：
 
@@ -218,13 +224,7 @@ public int binarySearch(int[] nums, int target) {
 
 <u>它与类型 1 的唯一区别就在于对右侧值的收缩更加保守。这种收缩方式可以有效地防止我们一下子跳过了目标边界从而导致了搜索区域的遗漏。</u>
 
-不理解的话可以看一下这个题目的题解 👉 [154 - 寻找旋转排序数组中的最小值 II — Hard](计算机基础/算法/LeetCode/二分查找/154-寻找旋转排序数组中的最小值II.md)
-
 ### ③ 二分查找右边界
-
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [1337 - 方阵中战斗力最弱的 K 行](计算机基础/算法/LeetCode/二分查找/1337-方阵中战斗力最弱的K行.md) |   😎    |
 
 有了寻找左边界的分析之后，再来看寻找右边界就容易很多了，毕竟左右两种情况是对称的，关于使用场景这里就不再赘述了，大家对称着理解就好。我们直接给出**右边界查找类型 Ⅰ** 的模板代码（<u>数组有序，但包含重复元素 或 数组部分有序，且不包含重复元素</u>）：
 
@@ -260,10 +260,6 @@ public int binarySearch(int[] nums, int target) {
 右边界的查找一般来说不会单独使用，如有需要，一般是需要同时查找左右边界。
 
 ### ④ 二分查找左右边界
-
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [34 - 在排序数组中查找元素的第一个和最后一个位置](计算机基础/算法/LeetCode/二分查找/34-在排序数组中查找元素的第一个和最后一个位置.md) |   👻    |
 
 前面我们介绍了左边界和右边界的查找，那么查找左右边界就容易很多了——只要分别查找左边界和右边界就行了。
 
@@ -313,10 +309,6 @@ public int[] searchRange(int[] nums, int target) {
 ```
 
 ### ⑤ 二分查找极值点
-
-|                            🎯 题解                            | 🎲 难度 |
-| :----------------------------------------------------------: | :----: |
-| [852 - 山脉数组的峰顶索引](计算机基础/算法/LeetCode/二分查找/852-山脉数组的峰顶索引.md) |   😎    |
 
 二分查找还有一种有趣的变体是二分查找极值点，之前我们使用`nums[mid]`去比较的时候，常常是和给定的目标值`target`比，或者和左右边界比较，在二分查找极值点的应用中，我们是和相邻元素去比，以完成某种单调性的检测。大家直接看 [852 - 山脉数组的峰顶索引](计算机基础/算法/LeetCode/二分查找/852-山脉数组的峰顶索引.md) 这个例子即可明白~
 
