update binarysearch LeetCode.154/1337/34/852

--- a/docs/01.题解/70.二分查找/20.二分查找左边界/30.寻找旋转排序数组中的最小值.md
+++ b/docs/01.题解/70.二分查找/20.二分查找左边界/30.寻找旋转排序数组中的最小值.md
@@ -72,9 +72,10 @@ class Solution {
             int mid = left + ((right - left) >> 1);
             // 收缩左边界
             if (nums[mid] > nums[right]) {
+                // 说明 mid 在最小值的左边（最小值在 mid 的右边）
                 left = mid + 1;
             } else {
-                // 收缩右边界
+                // 收缩右边界（说明 mid 在最小值的右边，最小值在 mid 的左边）
                 right = mid;
             }
         }
