--- a/docs/01.题解/70.二分查找/00.二分查找理论基础.md
+++ b/docs/01.题解/70.二分查找/00.二分查找理论基础.md
@@ -46,7 +46,7 @@ permalink: /binarysearch/
 - 二分查找左右边界
 - 二分查找极值点
 
-### ① 标准的二分查找
+## 4. 模板一：标准的二分查找
 
 首先，标准二分查找的适用场景是：**数组元素有序且不重复**
 
@@ -122,7 +122,7 @@ public int binarySearch(int[] nums, int target) {
 
 即<u>因为 `mid` 对于长度为偶数的区间总是偏左的，所以当区间长度小于等于 2 时，`mid` 总是和 `left` 在同一侧。</u>
 
-### ② 二分查找左边界
+## 5. 模板二：二分查找边界
 
 上述算法自然是无法应用到所有场景的，比如说给你有序数组 `nums = [1,2,2,2,3]`，`target` 为 2，此算法返回的索引是 2。但是如果我<u>想得到 `target` 的左侧边界，即索引 1，或者我想得到 `target` 的右侧边界，即索引 3</u>，这样的话上述标准形式的二分查找算法是无法处理的。
 
@@ -134,6 +134,19 @@ public int binarySearch(int[] nums, int target) {
 - 数组部分有序，且不包含重复元素
 
 <img src="https://gitee.com/veal98/images/raw/master/img/20200926161222.png" style="zoom:50%;" />
+
+**2）第二种情况**：
+
+- 数组部分有序，且包含重复元素
+
+<img src="https://gitee.com/veal98/images/raw/master/img/20200926152151.png" style="zoom: 67%;" />
+
+### 二分查找左边界
+
+1）先来看**第一种情况**：
+
+- 数组有序，但包含重复元素
+- 数组部分有序，且不包含重复元素
 
 查找右边界和左边界的模板差不多，这里我们先以查找左边界为例：
 
@@ -193,15 +206,13 @@ return nums[left] == target ? left : -1;
 
 
 
-**2）第二种情况**：
+2）再来看**第二种情况**：
 
 - 数组部分有序，且包含重复元素
 
-<img src="https://gitee.com/veal98/images/raw/master/img/20200926152151.png" style="zoom: 67%;" />
-
 同样地，我们先以查找左边界为例：
 
-这种条件下在我们向左收缩的时候，不能简单的令 `right = mid`，因为有重复元素的存在，这会导致我们有可能遗漏掉一部分区域，此时向左收缩只能采用比较保守的方式，代码模板如下：
+这种条件下，当我们找到目标元素的时候（`nums[mid] = target`），向左收缩右边界不能简单的令 `right = mid`，因为有重复元素的存在，这会导致我们有可能遗漏掉一部分区域。此时需要采用比较保守的方式即 `right --`，代码模板如下：
 
 ```java
 // 二分查找某个数的左边界
@@ -210,23 +221,30 @@ public int binarySearch(int[] nums, int target) {
     int right = nums.length - 1;
     while (left < right) {
         int mid = left + (right - left) / 2;
+        // 收缩左边界
         if (nums[mid] < target) {
             left = mid + 1;
         } else if (nums[mid] > target) {
+            // 收缩右边界
             right = mid;
         } else { // nums[mid] == target
+            // 保守收缩右边界
             right--;
         }
     }
+    
+    // 打补丁
     return nums[left] == target ? left : -1;
 }
 ```
 
-<u>它与类型 1 的唯一区别就在于对右侧值的收缩更加保守。这种收缩方式可以有效地防止我们一下子跳过了目标边界从而导致了搜索区域的遗漏。</u>
+它与类型 1 的唯一区别就在于对右侧值的收缩更加保守。这种收缩方式可以有效地防止我们一下子跳过了目标边界从而导致了搜索区域的遗漏。
 
-### ③ 二分查找右边界
+###  二分查找右边界
 
-有了寻找左边界的分析之后，再来看寻找右边界就容易很多了，毕竟左右两种情况是对称的，关于使用场景这里就不再赘述了，大家对称着理解就好。我们直接给出**右边界查找类型 Ⅰ** 的模板代码（<u>数组有序，但包含重复元素 或 数组部分有序，且不包含重复元素</u>）：
+有了寻找左边界的分析之后，再来看寻找右边界就容易很多了，毕竟左右两种情况是对称的，适用场景也都是一样的，大家对称着理解就好，这里我们给出二分查找右边界的**第一种情况**的模板（即数组有序，但包含重复元素；数组部分有序，且不包含重复元素）：
+
+查找左边界的代码中我们是先收缩左边界然后收缩右边界，那么相反的，查找右边界的时候我们就需要先收缩右边界然后收缩左边界。
 
 ```java
 // 二分查找某个数的右边界
@@ -235,9 +253,11 @@ public int binarySearch(int[] nums, int target) {
     int right = nums.length - 1;
     while (left < right) {
         int mid = left + ((right - left) / 2) + 1;
+        // 收缩右边界
         if (nums[mid] > target) {
             right = mid - 1;
         } else {
+            // 收缩左边界
             left = mid;
         }
     }
@@ -259,15 +279,18 @@ public int binarySearch(int[] nums, int target) {
 
 右边界的查找一般来说不会单独使用，如有需要，一般是需要同时查找左右边界。
 
-### ④ 二分查找左右边界
+### 二分查找左右边界
 
 前面我们介绍了左边界和右边界的查找，那么查找左右边界就容易很多了——只要分别查找左边界和右边界就行了。
+
+这里给出符合**第一种情况**的模板，（即数组有序，但包含重复元素；数组部分有序，且不包含重复元素）
 
 ```java
 // 二分查找某个数的左右边界
 public int[] searchRange(int[] nums, int target) {
 
-    int[] res = new int[]{-1, -1}; // 存储左右边界
+    // 存储左右边界 res[0] 左边界, res[1] 右边界
+    int[] res = new int[]{-1, -1}; 
 
     if(nums == null || nums.length == 0) 
         return res;
@@ -276,7 +299,7 @@ public int[] searchRange(int[] nums, int target) {
     int left = 0;
     int right = nums.length - 1;
     while (left < right) {
-        int mid = left + ((right - left) >> 1);
+        int mid = ((left + right) >> 1);
         if (nums[mid] < target) {
             left = mid + 1;
         } else {
@@ -285,15 +308,15 @@ public int[] searchRange(int[] nums, int target) {
     }
     res[0] = nums[left] == target ? left : -1;
 
-    // 寻找右边界
+    // 如果左边界是最后一个数的下标或者该数没有重复只存在一个，那么可以直接令右边界 = 左边界
     if (res[0] != -1) {
         if (left == nums.length - 1 || nums[left + 1] != target) {
             res[1] = left;
-        } 
-        else {
+        } else {
+            // 寻找右边界
             right = nums.length - 1;
             while (left < right) {
-                int mid = left + ((right - left) >> 1) + 1;
+                int mid = ((left + right) >> 1) + 1;
                 if (nums[mid] > target) {
                     right = mid - 1;
                 } else {
@@ -308,30 +331,34 @@ public int[] searchRange(int[] nums, int target) {
 }
 ```
 
-### ⑤ 二分查找极值点
+## 6. 模板三：二分查找极值点
 
-二分查找还有一种有趣的变体是二分查找极值点，之前我们使用`nums[mid]`去比较的时候，常常是和给定的目标值`target`比，或者和左右边界比较，在二分查找极值点的应用中，我们是和相邻元素去比，以完成某种单调性的检测。大家直接看 [852 - 山脉数组的峰顶索引](计算机基础/算法/LeetCode/二分查找/852-山脉数组的峰顶索引.md) 这个例子即可明白~
+标准的二分查找还有一种变体是二分查找极值点，之前我们使用 `nums[mid]` 去比较的时候，常常是和给定的目标值 `target` 比，或者和左右边界比较，**在二分查找极值点的应用中，我们是和相邻元素去比，以完成某种单调性的检测**。
 
 ```java
-public int binarySearch(int[] arr){
+public int binarySearch(int[] nums){
     int left = 0;
     int right = nums.length - 1;
 
     while(left <= right){
-        int mid = left + (right - left) / 2;
-        if(arr[mid] > arr[mid+1] && arr[mid] > arr[mid-1])
+        int mid = left + ((right - left) >> 1);
+        // 极值点
+        if (nums[mid] > nums[mid + 1] && nums[mid] > nums[mid - 1]) {
             return mid;
-        else if(arr[mid] > arr[mid+1]){ // 说明峰顶在 mid 左边
+        } else if (nums[mid] > nums[mid + 1]){ 
+            // 极值点在 mid 左边
             right = mid - 1;
-        }
-        else{
+        } else {
+            // 极值点在 mid 右边
             left = mid + 1;
         }
-    } // end while
+    }
 
     return -1;
 }
 ```
+
+可以看到和标准二分查找的代码唯一不同之处就是 if 判断的不同，其他都是一样的。
 
 ## References
 
