--- a/docs/01.题解/30.哈希表/80.三数之和.md
+++ b/docs/01.题解/30.哈希表/80.三数之和.md
@@ -101,5 +101,5 @@ class Solution {
 
 ## 💥 复杂度分析
 
-- 空间复杂度：O(N)
+- 空间复杂度：O(N^2)（如果我们忽略掉用于存储答案的空间，那么该算法的空间复杂度主要来自于排序，额外的排序的空间复杂度为 O(logN)）
 - 时间复杂度：排序的时间复杂度是 O(nlogn)，两层循环处理的时间复杂度是 O(N^2)，所以总时间复杂度为 O(N^2)
