add two-points LeetCode.141/142/876

--- a/docs/01.题解/80.双指针法/00.双指针法理论基础.md
+++ b/docs/01.题解/80.双指针法/00.双指针法理论基础.md
@@ -39,11 +39,13 @@ while (right < s.size()) {
 
 ## 3. 快慢指针
 
-### 链表
+快慢指针一般用来解决两个场景下的问题：
+
+1）**链表**
 
 快慢指针一般都初始化指向链表的头结点 `head`，前进时快指针 `fast` 在前，慢指针 `slow` 在后，巧妙解决一些链表中的问题。
 
-### 原地修改数组
+2）**原地修改数组**
 
 我们知道对于数组来说，在尾部插入、删除元素是比较高效的，时间复杂度是 O(1)，但是如果在中间或者开头插入、删除元素，就会涉及数据的搬移，时间复杂度为 O(N)，效率较低。
 
