add two-points LeetCode.26/27/283/82

--- a/docs/01.题解/80.双指针法/00.双指针法理论基础.md
+++ b/docs/01.题解/80.双指针法/00.双指针法理论基础.md
@@ -19,6 +19,15 @@ date: 2021-09-22 16:28:52
 
 **二分查找就是一个非常典型的左右指针的应用**。
 
+代表题目：
+
+- [344. 反转字符串 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/reverse-string/)
+- [167. 两数之和 II - 输入有序数组 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)
+- [557. 反转字符串中的单词 III - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/reverse-words-in-a-string-iii/)
+- [151. 翻转字符串里的单词 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/reverse-words-in-a-string/)
+- [15. 三数之和 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/3sum/)
+- [18. 四数之和 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/4sum/)
+
 ## 2. 滑动窗口算法
 
 滑动窗口算法是双指针里面最难的一部分，不过这个算法技巧的思路非仍然是左右指针的思想，就是维护一个窗口，不断滑动，然后更新答案。该算法的大致逻辑如下：
@@ -37,6 +46,12 @@ while (right < s.size()) {
 }
 ```
 
+代表题目：
+
+- [3. 无重复字符的最长子串 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/)
+- [567. 字符串的排列 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/permutation-in-string/)
+- [76. 最小覆盖子串 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/minimum-window-substring/)
+
 ## 3. 快慢指针
 
 快慢指针一般用来解决两个场景下的问题：
@@ -44,6 +59,13 @@ while (right < s.size()) {
 1）**链表**
 
 快慢指针一般都初始化指向链表的头结点 `head`，前进时快指针 `fast` 在前，慢指针 `slow` 在后，巧妙解决一些链表中的问题。
+
+代表题目：
+
+- [141. 环形链表 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/linked-list-cycle/)
+- [142. 环形链表 II - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/linked-list-cycle-ii/)
+- [876. 链表的中间结点 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/middle-of-the-linked-list/)
+- [19. 删除链表的倒数第 N 个结点 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
 
 2）**原地修改数组**
 
@@ -54,3 +76,9 @@ while (right < s.size()) {
 如果不是原地修改的话，我们直接 new 一个 `int[]` 数组，把修改之后的元素放进这个新数组中，然后返回这个新数组即可。
 
 解决这类原地修改数组的问题一般都可以使用快慢指针的思想。
+
+代表题目：
+
+- [26. 删除有序数组中的重复项 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+- [27. 移除元素 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/remove-element/)
+- [283. 移动零 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/move-zeroes/)
