add two-pointes LeetCode.977/209

--- a/docs/01.题解/80.双指针法/20.滑动窗口/10.无重复字符的最长子串.md
+++ b/docs/01.题解/80.双指针法/20.滑动窗口/10.无重复字符的最长子串.md
@@ -49,7 +49,7 @@ permalink: /pages/273e36/
 
 ## 🔔 解题思路
 
-我们使用双指针中的左右指针技巧，初始化 `left = right = 0`，**把索引左闭右开区间 `[left, right)`称为一个「窗口」**。用 Map 定义这个窗口，key 存储字符，value 存储在窗口中该字符出现的次数。
+我们使用双指针中的左右指针技巧，初始化 `left = right = 0`，**把索引左闭右开区间 `[left, right)`称为一个「窗口」**。**用 Map 存储这个窗口中的数据**，key 存储字符，value 存储在窗口中该字符出现的次数。
 
 1. 首先，最开始的时候窗口 [0, 0) 中没有元素对吧（因为我们约定左闭右**开**区间），所以我们需要把 right 右移（right ++）**扩大窗口**，使得第一个字符进入我们的窗口，区间扩大为 [0, 1)，这个时候，下标为 0 的第一个字符就进入了窗口。处理下这个字符（就是将其存入 map）。
 2. 如果窗口（map）中该字符出现的次数 > 1（即出现重复字符），则收缩左边界（left ++）直到该字符不重复为止（**缩小窗口**，注意对应的处理下 map）。这样，收缩完成后，当前的 [left, right) 这个窗口中就不包含重复元素了
