--- a/docs/01.题解/80.双指针法/20.滑动窗口/20.字符串的排列.md
+++ b/docs/01.题解/80.双指针法/20.滑动窗口/20.字符串的排列.md
@@ -34,7 +34,7 @@ permalink: /pages/27da52/
 
 ## 🔔 解题思路
 
-首先，需要明白的是！**排列不会改变字符串中每个字符的个数，所以只有当两个字符串每个字符的个数均相等时，一个字符串才是另一个字符串的排列**。
+首先，需要明白的是！**排列不会改变字符串中每个字符的个数，所以只有当两个字符串每个字符的个数均相等时，一个字符串才是另一个字符串的排列。用 Map 存储这个窗口中的数据**
 
 根据这一性质，记 s1 的长度为 n，我们可以**遍历 s2 中的每个长度为 n 的子串，判断子串和 s1 中每个字符的个数是否相等，若相等则说明该子串是 s1 的一个排列**。
 
