--- a/docs/01.题解/00.关于.md
+++ b/docs/01.题解/00.关于.md
@@ -65,18 +65,23 @@ date: 2021-09-15 10:55:44
 
 ## 🍭 刷题打卡
 
-下方扫码免费进入灯塔打卡小程序的学习小组，来比比到底谁更卷：
+下方扫码关注公众号【飞天小牛肉】回复 `学习小组` 免费进入学习小组，连续打卡 21 天还能拿红包呀，已经有 100+ 小伙伴在这里啦，快加入我们吧
 
-![](https://gitee.com/veal98/images/raw/master/img/20211001113803.png)
+<img width = 240px src="https://gitee.com/veal98/images/raw/master/img/公众号二维码.png" />
 
-![](https://gitee.com/veal98/images/raw/master/img/20211001113816.jpg)
+学习小组截图示例
+
+<img width = 400px src="https://gitee.com/veal98/images/raw/master/img/20211001113816.jpg" />
 
 ## 🎓 关于我
 
 博主东南大学硕士在读，携程后台开发暑期实习生，成长的 Javaer，芸芸众生中的普通学子，热爱健身与篮球，最大的梦想就是赚很多钱。
 
+我的公众号：**飞天小牛肉**，2020/12/29 日开通，专注于分享计算机基础（数据结构 + 算法 + 计算机网络 + 数据库 + 操作系统 + Linux）和 Java 相关技术栈的原创技术好文，**让大家可以快速掌握重点知识，有的放矢**。下方扫码关注第一时间获取干货更新：
 
-如果各位小伙伴春招秋招没有拿得出手的项目的话，可以参考这个 [「开源社区系统 Echo」Gitee 官方推荐项目，目前已累计 1.1k+ star](https://gitee.com/veal98/Echo)，基于 SpringBoot + MyBatis + MySQL + Redis + Kafka + Elasticsearch + Spring Security + ... 并提供详细的开发文档和配套教程。公众号后台回复 `Echo` 可以获取配套手把手教程，目前尚在更新中
+<img width = 240px src="https://gitee.com/veal98/images/raw/master/img/公众号二维码.png" />
+
+另外，如果各位小伙伴春招秋招没有拿得出手的项目的话，可以参考这个 [「开源社区系统 Echo」Gitee 官方推荐项目，目前已累计 1.1k+ star](https://gitee.com/veal98/Echo)，基于 SpringBoot + MyBatis + MySQL + Redis + Kafka + Elasticsearch + Spring Security + ... 并提供详细的开发文档和配套教程。公众号后台回复 `Echo` 可以获取配套手把手教程，目前尚在更新中
 
 
 
